# libmpc

./: .gitignore  LICENSE  meson.build
common/: huffman-bcl.c  meson.build  tags.c
include/: meson.build
include/mpc/: mpc_types.h  mpcdec.h
libmpcdec/: huffman.c  meson.build  mpc_bits_reader.c  mpc_bits_reader.h  mpc_decoder.c  mpc_demux.c  mpc_reader.c
libmpcenc/: bitstream.c  encode_sv7.c  meson.build  quant.c
libmpcpsy/: ans.c  libmpcpsy.h  meson.build  profile.c  psy.c  psy_tab.c
libwavformat/: input.c  meson.build
mpc2sv8/: meson.build
mpcchap/: iniparser.c  meson.build  mpcchap.c
mpccut/: meson.build  mpccut.c
mpcdec/: meson.build  mpcdec.c
mpcenc/: meson.build  mpcenc.c  mpcenc.h  pipeopen.c  wave_in.c
mpcgain/: meson.build
wavcmp/: meson.build  wavcmp.c
win32/: meson.build
